assets/css/buttons.css
/* ... */
.btn-follows {
    & span {
        &::before {
            padding: .6rem 1rem .6rem 0;
        }
    }
}

.btn-secondary {
    /* background : transparent; */
    /* border     : 0.15rem solid var(--color-secondary-border); */
    color: var(--color-fg-1);
}

.btn-icotext {
    position: relative;
    display         : flex;
    align-items     : center;
    justify-content : center;
    width: max-content;
    & span {
        align-content: center;
        text-align: right;
        width: fit-content;
        &::before {
            filter: var(--filter-invert-on_off);
            background-position: left !important;
            content: '';
            position: absolute;
            top: 0;
            left: 1.2rem;
            width: 100%;
            height: 100%;
        }
    }
}
/* --- button icon span classes --- */
.btn-following {
    &::before {
        background : url('/assets/icons/following_24.svg') no-repeat center;
    }
}
.btn-followers {
    &::before {
        background : url('/assets/icons/followers_24.svg') no-repeat center;
    }
}
.btn-follow {
    &::before {
        background : url('/assets/icons/arrow-right-white_24.svg') no-repeat center;
    }
}
.btn-posts {
    &::before {
        background : url('/assets/icons/post_16.svg') no-repeat center;
    }
}
.btn-notifications {
    &::before {
        background : url('/assets/icons/notification_16.svg') no-repeat center;
    }
}


.btn-filters {
    &::before {
        background : url('/assets/icons/filters_16.svg') no-repeat center;
    }
}
.btn-sort {
    &::before {
        background : url('/assets/icons/sort_16.svg') no-repeat center;
    }
}
.btn-likes {
    &::before {
        background : url('/assets/icons/likes_16.svg') no-repeat center;
    }
}
.btn-dislikes {
    &::before {
        background : url('/assets/icons/dislikes_16.svg') no-repeat center;
    }
}
.btn-share {
    &::before {
        background : url('/assets/icons/share_16.svg') no-repeat center;
    }
}
.btn-heart-full {
    &::before {
        background : url('/assets/icons/heart-full_24.svg') no-repeat center;
    }
}
.btn-heart-empty {
    &::before {
        background : url('/assets/icons/heart-empty_24.svg') no-repeat center;
    }
}
.btn-clock {
    &::before {
        background : url('/assets/icons/clock_16.svg') no-repeat center;
    }
}
.btn-reply {
    &::before {
        background : url('/assets/icons/reply_16.svg') no-repeat center;
    }
}
.btn-report {
    &::before {
        background : url('/assets/icons/report_16.svg') no-repeat center;
        }
}
.btn-comment {
    &::before {
        background : url('/assets/icons/comment_16.svg') no-repeat center;
    }
}
.btn-mute {
    &::before {
        background : url('/assets/icons/mute_16.svg') no-repeat center;
        }
}

.btn- {
    &::before {
        background : url('') no-repeat center;
        }
}
.btn- {
    &::before {
        background : url('') no-repeat center;
        }
}
.btn- {
    &::before {
        background : url('') no-repeat center;
        }
}

.btn-activity {
    border: 0.15rem solid transparent;
    transition: border var(--transition-dur-hover);
    &:hover {
        border: 0.15rem solid var(--color-secondary-hover);
    }
}
.btn-active {
    border: 0.15rem solid var(--color-secondary-active);
    pointer-events: none;
    /* TODO use Kamils lab mixes */
}
.btn-icoonly{
    display         : flex;
    align-items     : center;
    justify-content : center;
    width           : fit-content;
    padding: 1.2rem 1rem;
    & img {
        filter: var(--filter-invert-on_off);
    }
    &:has(.btn-settings), &:has(.btn-save-active), &:has(.btn-save-empty) {
        padding: 0;
    }
}


.btn-sm .btn-save-active, .btn-sm .btn-save-empty, .btn-sm .btn-edit, .btn-sm .btn-settings {
    background-size: 1.6rem;
    width: 1.6rem;
    height: 1.6rem;
}

.btn-edit {
    background: url('/assets/icons/edit_16.svg') no-repeat center;
}

.btn-save-empty {
    background    : url("/assets/icons/heart-empty_24.svg") no-repeat center;
    margin-inline : auto 0;

}

.btn-save-active {
    background    : url("/assets/icons/heart-full_24.svg") no-repeat center;
}

.btn-settings {
    background: url('/assets/icons/settings_24.svg') no-repeat center;
    justify-self: flex-end;
}

.btn-filled, .btn-filled-fancy {
    background : var(--color-bg-3);
    /* transition: border 300ms cubic-bezier(1, 0.02, 1, -0.27); */
    border     : 0.15rem solid var(--color-bg-4);

    &:hover {
        /* background: var(--color-secondary-hover); */
        border: .15rem solid var(--color-secondary-hover);
    }
}
.btn-filled-fancy {
    &:hover{
        animation: btn-fill var(--transition-dur-hover) 1 forwards;
    }
}
.btn-action {
    &:hover {
        border: .15rem solid var(--color-secondary-hover);
    }
}
.btn-action-primary, .btn-action-secondary {
    position: relative;
    &:hover::before {
        content: "";
        position: absolute;
        top: -0.2rem;
        left: -0.2rem;
        width: calc(100% + 0.4rem);
        height: calc(100% + 0.4rem);
        --grad-from: 0deg;
        border-radius: var(--btn-radius);
        animation: orbit-btn var(--transition-dur-hover) ease-in 1 forwards;
        z-index: -10;
    }
    &:hover::after {
        content: '';
        position: absolute;
        top: 50%;
        left: 50%;
        color: var(--color-fg-1);
        transform: translate(-50%, -50%);
        width: var(--beam-linear-w);
        height: var(--beam-linear-h);
        /* border: 1px solid rgba(1 1 1 / 0.2); */
        border-radius: var(--btn-radius);
        animation: linear-fill-button .2s ease-in .1s 1 forwards;
        z-index: 1;
    }
}
/* ... */

